--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# .env files
+.env
+
+# Local environment files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # dependencies
 /node_modules
 /.pnp
